# OASYS2-SRW

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
orangecontrib/srw/menu/: ow_srw_tools_menu.py
orangecontrib/srw/tutorials/: SRW - APS-ISN.ows  SRW - Sources.ows
orangecontrib/srw/util/: scanning.py  srw_util.py
orangecontrib/srw/widgets/gui/: ow_srw_crystal.py  ow_srw_grating.py  ow_srw_optical_element.py  ow_srw_source.py  ow_srw_wavefront_viewer.py  ow_srw_widget.py
orangecontrib/srw/widgets/light_sources/: ow_srw_3d_light_source.py  ow_srw_gaussian_source.py  ow_srw_power_density.py  ow_srw_radiation.py  ow_srw_spectrum.py  ow_srw_undulator.py
orangecontrib/srw/widgets/loop_management/: __init__.py  ow_srw_accumulation_point.py
orangecontrib/srw/widgets/loops/: ow_srw_accumulation_point.py
orangecontrib/srw/widgets/native/: ow_srw_intensity_plotter.py  ow_srw_me_degcoh_plotter.py  ow_srw_python_script_me.py  ow_srw_python_script_se.py
orangecontrib/srw/widgets/optical_elements/: ow_srw_crl_barc4ro.py  ow_srw_elliptical_grating.py  ow_srw_hyperbolic_mirror.py  ow_srw_paraboloid_mirror.py  ow_srw_toroidal_mirror.py
orangecontrib/srw/widgets/scanning/: __init__.py  multiple_height_profile_simulator_S.py  multiple_height_profile_simulator_T.py  ow_histogram_scan.py  ow_multiple_oasys_data_converter.py  ow_scan_file_node_point.py  ow_scan_variable_node_point.py
orangecontrib/srw/widgets/tools/: ow_beamline_renderer.py  ow_srw_reflectivity_generator.py
